--- a/.github/workflows/push-to-server.yml
+++ b/.github/workflows/push-to-server.yml
@@ -12,10 +12,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Don't run if repo is template
-      - if : github.repository == 'UG-Machine-Learning-Computer-Vision/mlab-model-template'
-        name: Don't run if repo is template
-        run: exit 0
+      # STOP IF it is template repo
+      - if : ${{ github.repository == 'UG-Machine-Learning-Computer-Vision/mlab-model-template' }}
+        name: Stop execution
+        run: exit 1
       - uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v2
@@ -25,10 +25,9 @@ jobs:
         id: requirements
         uses: dorny/paths-filter@v2
         with:
-          filters: |
-            requirements.txt
+          filters: requirements.txt
       - if : steps.requirements.outputs.paths-changed == 'true'
-        name: multiple command
+        name: push with installing requirements.txt
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SSH_HOST }}
