--- a/.github/workflows/push-to-server.yml
+++ b/.github/workflows/push-to-server.yml
@@ -25,8 +25,10 @@ jobs:
         id: requirements
         uses: dorny/paths-filter@v2
         with:
-          filters: requirements*
-      - if : steps.requirements.outputs.paths-changed == 'true'
+          filters: |
+            txt:
+              - requirements.txt
+      - if : steps.requirements.outputs.txt == 'true'
         name: push with installing requirements.txt
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -37,7 +39,7 @@ jobs:
             cd ${{ secrets.MODELS_PATH }}/${{ secrets.PROJECT_NAME }}
             git pull origin main
             ./install.sh true
-      - if : steps.requirements.outputs.paths-changed == 'false'
+      - if : steps.requirements.outputs.txt == 'false'
         name: push without installing requirements.txt
         uses: appleboy/ssh-action@v1.0.0
         with:
