--- a/.github/workflows/push-to-server.yml
+++ b/.github/workflows/push-to-server.yml
@@ -38,7 +38,7 @@ jobs:
           script: |
             cd ${{ secrets.MODELS_PATH }}/${{ secrets.PROJECT_NAME }}
             git pull origin main
-            ./install.sh true
+            ./install.sh true ${{ secrets.MLAB_API_URL }}
       - if : steps.requirements.outputs.txt == 'false'
         name: push without installing requirements.txt
         uses: appleboy/ssh-action@v1.0.0
@@ -49,6 +49,6 @@ jobs:
           script: |
             cd ${{ secrets.MODELS_PATH }}/${{ secrets.PROJECT_NAME }}
             git pull origin main
-            ./install.sh false
+            ./install.sh false ${{ secrets.MLAB_API_URL }}
 
     
